<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="viewModel"
            type="com.raghu.android.mathapp.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:context=".views.MainActivity">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mean_median_calculation"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/input_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_number_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_enable_gradient"
            android:text="@string/add_to_array"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout" />

        <TextView
            android:id="@+id/input_array_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.list}"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/colorLiteGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_number_bt"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/mean_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mean"
            android:fontFamily="sans-serif-medium"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_array_tv"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/median_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/median"
            android:fontFamily="sans-serif-medium"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_array_tv"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/mean_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.mean}"
            android:fontFamily="sans-serif-medium"
            android:textSize="50sp"
            android:textColor="@color/colorRed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mean_label_tv"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/median_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.median}"
            android:fontFamily="sans-serif-medium"
            android:textSize="50sp"
            android:textColor="@color/colorRed"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mean_label_tv"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/reset_array_bt"
            android:visibility="@{viewModel.resetArrayVisibility}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_enable_gradient"
            android:text="@string/reset_array"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>